# HAII_Individual_Project

./: .gitignore  README.md  pyproject.toml
haii_project/: client.py  commands.py  llm.py  llm_data.py  main.py
